--- a/xivres/xivres.vcxproj.filters
+++ b/xivres/xivres.vcxproj.filters
@@ -277,5 +277,8 @@
     <ClCompile Include="impl\texture.preview.cpp">
       <Filter>Impl\resource types\texture</Filter>
     </ClCompile>
+    <ClCompile Include="impl\path_spec.cpp">
+      <Filter>Impl</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
