--- a/xivres.example/xivres.example.vcxproj.filters
+++ b/xivres.example/xivres.example.vcxproj.filters
@@ -5,5 +5,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="example.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
 </Project>
