--- a/xivres/xivres.vcxproj
+++ b/xivres/xivres.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="impl\util.bitmap_copy.cpp" />
     <ClCompile Include="impl\util.dxt.cpp" />
     <ClCompile Include="impl\texture.preview.cpp" />
+    <ClCompile Include="impl\util.thread_pool.cpp" />
     <ClCompile Include="impl\util.zlib_wrapper.cpp" />
     <ClCompile Include="impl\stream.cpp" />
     <ClCompile Include="impl\texture.mipmap_stream.cpp" />
