Make it compile

--- a/xivres.redirect/xivres.redirect.config.json
+++ b/xivres.redirect/xivres.redirect.config.json
@@ -8,7 +8,7 @@
 	"logPathFilters": [
 		{
 			"pattern": ".*",
-			"include": false
+			"include": true
 		},
 		{
 			"pattern": "^(music|exd|bg|bgcommon)/.*",
